🚨 fix the open Sonar findings
Everything except field injection, cellspacing in the mail templates and
System.out in the agent CLI, which stay as they are on purpose.

- re-interrupt or rethrow InterruptedException instead of swallowing it
- run osqueryi by the path found on PATH, failing with OsqueryException
- read the agent's prompt with IO.readln
- bundle the dashboard's report counts into a record
- associate the matcher labels with their fields, black text on red badges
- replace sleeps in tests with latches and Awaitility, parameterize repeats
- constants, unnamed variables, private constructors, dangling Javadoc

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>